compile_errors.txt
bootstrap_compiler_core.cpp:8801:12: error: no viable conversion from returned value of type 'JitInterpreterConfig' to function return type 'int64_t' (aka 'long')
 8801 |     return JitInterpreterConfig{.mode = JitMode_AlwaysJit, .backend = "auto", .jit_threshold = 0, .verbose = false};
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
bootstrap_compiler_core.cpp:8898:46: error: no member named 'as_int_to_string' in 'SplValue'
 8898 |     int64_t result = spl_array_get(types, 0).as_int_to_string(spl_array_get(types, 0).as_int);
      |                      ~~~~~~~~~~~~~~~~~~~~~~~ ^
bootstrap_compiler_core.cpp:8900:17: error: use of undeclared identifier 'types_len'
 8900 |     while ((i < types_len(types))) {
      |                 ^
bootstrap_compiler_core.cpp:8901:19: error: no matching function for call to 'spl_str_concat'
 8901 |         result = (spl_str_concat(result, ", ") + spl_array_get(types, i).as_int_to_string(spl_array_get(types, i).as_int));
      |                   ^~~~~~~~~~~~~~
seed/runtime.h:85:10: note: candidate function not viable: no known conversion from 'int64_t' (aka 'long') to 'const char *' for 1st argument
   85 | char*    spl_str_concat(const char* a, const char* b);
      |          ^              ~~~~~~~~~~~~~
bootstrap_compiler_core.cpp:8901:74: error: no member named 'as_int_to_string' in 'SplValue'
 8901 |         result = (spl_str_concat(result, ", ") + spl_array_get(types, i).as_int_to_string(spl_array_get(types, i).as_int));
      |                                                  ~~~~~~~~~~~~~~~~~~~~~~~ ^
bootstrap_compiler_core.cpp:8904:12: error: cannot initialize return object of type 'const char *' with an lvalue of type 'int64_t' (aka 'long')
 8904 |     return result;
      |            ^~~~~~
bootstrap_compiler_core.cpp:8908:52: error: expected ')'
 8908 |     return HirExpr{.kind = hirexprkind_IntLit(value: value)};
      |                                                    ^
bootstrap_compiler_core.cpp:8908:46: note: to match this '('
 8908 |     return HirExpr{.kind = hirexprkind_IntLit(value: value)};
      |                                              ^
bootstrap_compiler_core.cpp:8912:53: error: expected ')'
 8912 |     return HirExpr{.kind = hirexprkind_BoolLit(value: value)};
      |                                                     ^
bootstrap_compiler_core.cpp:8912:47: note: to match this '('
 8912 |     return HirExpr{.kind = hirexprkind_BoolLit(value: value)};
      |                                               ^
bootstrap_compiler_core.cpp:8916:53: error: expected ')'
 8916 |     return HirExpr{.kind = hirexprkind_TextLit(value: value)};
      |                                                     ^
bootstrap_compiler_core.cpp:8916:47: note: to match this '('
 8916 |     return HirExpr{.kind = hirexprkind_TextLit(value: value)};
      |                                               ^
bootstrap_compiler_core.cpp:8920:48: error: expected ')'
 8920 |     return HirExpr{.kind = hirexprkind_Var(name: name)};
      |                                                ^
bootstrap_compiler_core.cpp:8920:43: note: to match this '('
 8920 |     return HirExpr{.kind = hirexprkind_Var(name: name)};
      |                                           ^
bootstrap_compiler_core.cpp:8924:53: error: expected ')'
 8924 |     return HirExpr{.kind = hirexprkind_Lambda(params: params, body: body)};
      |                                                     ^
bootstrap_compiler_core.cpp:8924:46: note: to match this '('
 8924 |     return HirExpr{.kind = hirexprkind_Lambda(params: params, body: body)};
      |                                              ^
